# rusty

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build-release.sh  deploy-docs.sh  mkdocs.yml  research-10-features.md  table-1780373691479.csv
.github/workflows/: deploy-docs.yml
crates/agent/: Cargo.toml
crates/agent/src/: checkpoint_writer.rs  compact.rs  lib.rs  loop.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: cancel.rs  config.rs  context.rs  cost.rs  credentials.rs  error.rs  history.rs  lib.rs  memory.rs  permissions.rs  plan.rs  session_memory.rs  setup_wizard.rs  task.rs  types.rs  update.rs
crates/keymap/: Cargo.toml  keybindings.example.json
crates/keymap/src/: dispatcher.rs  keymap.rs  lib.rs  parse.rs  types.rs
crates/provider/: Cargo.toml
crates/provider/src/: anthropic.rs  lib.rs  openai.rs  types.rs
crates/tools/: Cargo.toml
crates/tools/src/: agent.rs  apply_patch.rs  background.rs  bash.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  lib.rs  memory.rs  note.rs  plan_mode.rs  question.rs  task_output.rs  task_stop.rs  todowrite.rs  web_fetch.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  lib.rs  model_registry.rs  sidebar.rs  ui.rs
docs/: docs.json  index.md  index.mdx  installation.md  installation.mdx  quickstart.md
docs/compose/plans/: 2026-06-30-rebuild-boundary.md
docs/configuration/: credentials.md  credentials.mdx  keybindings.mdx  permissions.md  permissions.mdx  presets.md  presets.mdx  settings.md  settings.mdx
docs/getting-started/: installation.md
docs/guides/: agent-loop.md  agent-loop.mdx  running-modes.md  running-modes.mdx  sessions.md  sessions.mdx  slash-commands.md  slash-commands.mdx
docs/reference/: cli.md
docs/stylesheets/: rusty.css
docs/tools/: bash.md  bash.mdx  file-operations.md  file-operations.mdx  overview.md  overview.mdx  search.md  sub-agents.mdx  task-management.md  task-management.mdx  web-fetch.md  web-fetch.mdx
overrides/: main.html
rusty-docs/: .gitignore  .nvmrc  README.md  astro.config.mjs  package-lock.json  package.json
rusty-docs/src/content/docs/: index.mdx
rusty-docs/src/content/docs/configuration/: credentials.md  permissions.md  presets.md  settings.md
rusty-docs/src/content/docs/getting-started/: installation.md  quickstart.md
rusty-docs/src/content/docs/guides/: agent-loop.md  running-modes.md  sessions.md  slash-commands.md
rusty-docs/src/content/docs/reference/: cli.md
rusty-docs/src/content/docs/tools/: bash.md  file-operations.md  overview.md  search.md  sub-agents.md  task-management.md  web-fetch.md
rusty-docs/src/content/docs/zh-cn/: index.mdx
rusty-docs/src/content/docs/zh-cn/configuration/: credentials.md  permissions.md  presets.md  settings.md
rusty-docs/src/content/docs/zh-cn/getting-started/: installation.md  quickstart.md
rusty-docs/src/content/docs/zh-cn/guides/: agent-loop.md  running-modes.md  sessions.md  slash-commands.md
rusty-docs/src/content/docs/zh-cn/reference/: cli.md
rusty-docs/src/content/docs/zh-cn/tools/: bash.md  file-operations.md  overview.md  search.md  sub-agents.md  task-management.md  web-fetch.md
rusty-docs/src/styles/: rusty.css
scripts/: deploy-docs.sh
site/: index.html  install  new_index.html  privacy.html
