# Copyright (C) 2026 PDG Global Limited
# SPDX-License-Identifier: AGPL-3.0-or-later

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/provider",
    "crates/tools",
    "crates/agent",
    "crates/tui",
    "crates/cli",
]

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "macos-system-configuration", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
glob = "0.3"
walkdir = "2"
similar = "2"
parking_lot = "0.12"
dashmap = "6"
async-trait = "0.1"
futures = "0.3"
schemars = "0.8"
clap = { version = "4", features = ["derive", "env"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
scopeguard = "1"
dirs = "6"
arboard = "3"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust", "vendored"] }
base64 = "0.22"
png = "0.17"
once_cell = "1"
