# Copyright (C) 2026 PDG Global Limited
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "rusty-agent"
version.workspace = true
edition.workspace = true

[dependencies]
rusty-core = { path = "../core", default-features = false }
rusty-provider = { path = "../provider" }
rusty-tools = { path = "../tools" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
scopeguard.workspace = true

[dev-dependencies]
tempfile = "3"
