# Copyright (C) 2026 PDG Global Limited
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "rusty"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rusty"
path = "src/main.rs"

[dependencies]
rusty-core = { path = "../core" }
rusty-provider = { path = "../provider" }
rusty-tools = { path = "../tools" }
rusty-agent = { path = "../agent" }
rusty-tui = { path = "../tui" }
tokio.workspace = true
clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
crossterm.workspace = true
ratatui.workspace = true
arboard.workspace = true
