# Copyright (C) 2026 PDG Global Limited
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "rusty-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
anyhow.workspace = true
tokio.workspace = true
