# Copyright (C) 2026 PDG Global Limited
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "rusty-core"
version.workspace = true
edition.workspace = true

[features]
default = ["os-keyring"]
# OS keyring integration (macOS Keychain, Windows Credential Manager, Linux Secret Service).
# Disabled for FreeBSD where the vendored dbus build is not supported.
os-keyring = ["dep:keyring"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
anyhow.workspace = true
tokio.workspace = true
keyring = { workspace = true, optional = true }
reqwest.workspace = true
crossterm.workspace = true
