[package]
name = "rusty-provider"
version.workspace = true
edition.workspace = true

[dependencies]
rusty-core = { path = "../core" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true
tracing.workspace = true
