# Copyright (C) 2026 PDG Global Limited
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "rusty-tools"
version.workspace = true
edition.workspace = true

[dependencies]
rusty-core = { path = "../core", default-features = false }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
walkdir.workspace = true
glob.workspace = true
regex.workspace = true
similar.workspace = true
reqwest.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile = "3"
