# Copyright (C) 2025 Jeremy Moseley
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "rusty-tui"
version.workspace = true
edition.workspace = true

[dependencies]
rusty-core = { path = "../core" }
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
anyhow.workspace = true
