# Copyright (C) 2026 PDG Global Limited
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "rusty-tui"
version.workspace = true
edition.workspace = true

[dependencies]
rusty-core = { path = "../core", default-features = false }
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
arboard.workspace = true
base64.workspace = true
png.workspace = true
glob = "0.3"
walkdir = "2"
